--- a/pro/extensions/default-templates/shared/css/foogallery.css
+++ b/pro/extensions/default-templates/shared/css/foogallery.css
@@ -1512,7 +1512,7 @@ div.fg-ribbon-7 > span {
 	-webkit-box-orient: vertical;
 	clip-path: content-box;
 	min-height: fit-content;
-	flex: 0;
+	flex: 0 0 fit-content;
 }
 .foogallery .fg-caption-desc {
 	padding: 0;
